# R-Type

./: .gitignore  .gitmodules  CMakeLists.txt  README.MD
include/: CollisionResult.h  Engine.h  Entity.h  Keys.h  Level.h  Level1.h  Shot.h  Spaceship.h  SpaceshipShot.h
resources/anims/: bink.json  blaster.json  bug.json  cancer.json  enemy1.json  enemy_bullet.json  p_staff.json  pata_pata.json  pow_armor.json  scant.json  scant_bullet.json  shell.json  spaceship.json  tabrok.json
resources/levels/: rtype.json  rtype.tmx  rtype.tsx
resources/scripts/: BeamStateMachine.lua  Component.lua  DamageComponent.lua  EnemyPositionComponent.lua  EnemySpawning.lua  EnemyStateMachine.lua  EntityFactory.lua  EntityHandles.lua  HealthComponent.lua  Keys.lua  PlayerStateMachine.lua  ShootStateMachine.lua  Sounds.lua  StateMachineComponent.lua  StateManager.lua  ThreadManager.lua  boot.lua  util.lua
resources/scripts/actions/: Action.lua  Actions.lua  DelayAction.lua  TweenAction.lua
resources/scripts/components/: BeamComponent.lua  BeamType.lua  BitsComponent.lua  BugComponent.lua  DamageComponent.lua  EnemyPositionComponent.lua  ForceComponent.lua  ItemComponent.lua  ItemType.lua  LaserComponent.lua  LaserDirection.lua  LivesComponent.lua  MissileComponent.lua  PStaffComponent.lua  PowArmorComponent.lua  ScoreComponent.lua  ShellComponent.lua  ShellMovementComponent.lua  TagComponent.lua  TimerComponent.lua
resources/scripts/cutscenes/: Cutscenes.lua
resources/scripts/states/: BeamStateMachine.lua  BinkStateMachine.lua  BitsStateMachine.lua  BlasterStateMachine.lua  BugStateMachine.lua  CameraStateMachine.lua  CancerStateMachine.lua  EnemyBulletStateMachine.lua  EnemyStateMachine.lua  ForceStateMachine.lua  GameState.lua  ItemStateMachine.lua  LaserStateMachine.lua  LevelState.lua  LivesIndicatorStateMachine.lua  MissileStateMachine.lua  PStaffStateMachine.lua  PlayerStateMachine.lua  PowArmorStateMachine.lua  ScantStateMachine.lua  ShellItemStateMachine.lua  ShellStateMachine.lua  ShootStateMachine.lua  TabrokStateMachine.lua
resources/scripts/util/: table.lua
resources/shaders/: fragmentShader.glsl  vertexShader.glsl
resources/tiles/: hud.json  hud.tsx
src/: AnimationLoader.cpp  AnimationLoader.h  ComponentFactory.h  Engine.cpp  Engine.h  Entity.cpp  EntityFactory.cpp  EntityFactory.h  Fade.cpp  Fade.h  Level.cpp  Level.h  Level1.cpp  Log.h  Replay.cpp  Replay.h  Spaceship.cpp  SpaceshipShot.cpp  main.cpp
src/Component/: Components.cpp  Components.h
src/Debug/: DebugTools.cpp  DebugTools.h
src/ECS/: ComponentFactory.h  Entity.cpp  Entity.h
src/ECS/Component/: Components.cpp  Components.h
src/ECS/System/: AnimationSystem.cpp  AnimationSystem.h  CollisionSystem.cpp  CollisionSystem.h  MotionSystem.cpp  RenderSystem.cpp  RenderSystem.h
src/Graphics/: Animation.h  AnimationLoader.cpp  AnimationLoader.h  DefaultShaders.h  TextureLoader.cpp  TextureLoader.h  TilesLoader.cpp  TilesLoader.h
src/Scripting/: DebugManager.cpp  DebugManager.h  Entity.cpp  Entity.h  EntityManager.cpp  EntityManager.h  EventManager.h  ResourceManager.h  SoundManager.cpp  SoundManager.h
src/Scripting/Bindings/: AnimationComponentBindings.cpp  AudioBindings.cpp  AudioBindings.h  Bindings.cpp  Bindings.h  DebugBindings.cpp  DebugBindings.h  EntityBindings.cpp  EntityBindings.h  FileSystemBindings.cpp  FileSystemBindings.h  LevelBindings.cpp  LevelBindings.h  MathBindings.cpp  MathBindings.h  MotionComponentBindings.cpp  PositionComponentBindings.cpp  PositionComponentBindings.h
src/Scripting/Bindings/Components/: AnimationComponentBindings.cpp  AnimationComponentBindings.h  CollideComponentBindings.cpp  CollideComponentBindings.h  GraphicsComponentBindings.cpp  GraphicsComponentBindings.h  HierarchyComponentBindings.cpp  HierarchyComponentBindings.h  MotionComponentBindings.h  NameComponentBindings.cpp  NameComponentBindings.h  PositionComponentBindings.cpp  TilesComponentBindings.cpp  TilesComponentBindings.h
src/System/: AnimationSystem.cpp  Cache.h  CameraSystem.cpp  CameraSystem.h  CollisionSystem.cpp  CollisionSystem.h  ExplodeSystem.cpp  ExplodeSystem.h  HealthSystem.cpp  HealthSystem.h  InitSystem.cpp  InitSystem.h  InputSystem.cpp  InputSystem.h  InvincibleSystem.cpp  InvincibleSystem.h  Locator.h  MotionSystem.cpp  MotionSystem.h  RenderSystem.cpp  RenderSystem.h  SpawnSystem.cpp  SpawnSystem.h  StateSystem.cpp  StateSystem.h  Util.cpp  Util.h
